feat: Renombrar la aplicación de NutriMama a NutriApp en los widgets y archivos de configuración

--- a/fe_nutriapp/android/app/src/main/res/values/strings.xml
+++ b/fe_nutriapp/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">NutriMama</string>
+    <string name="app_name">NutriApp</string>
     <string name="widget_description">Muestra tu racha de días completados</string>
 </resources>
